fix issue refresh token race condition
