# src/main/resources/api-specs/users-openapi.yaml
@@ -575,7 +575,7 @@ components:
           description: "Apakah user/blogger ini telah aktif dan bisa melakukan kediatan blogging?."
           default: false
           example: true
-        is_email_verified:
+        email_verified:
           type: boolean
           description: "Apakah user/blogger sudah menghubungkan email nya?."
           default: false
@@ -607,7 +607,7 @@ components:
         - password
         - authority
         - enabled
-        - is_email_verified
+        - email_verified
 
     UserSimpleDTO:
       type: object
@@ -837,7 +837,7 @@ components:
           description: "Apakah user/blogger ini telah aktif dan bisa melakukan kediatan blogging?."
           default: false
           example: true
-        is_email_verified:
+        email_verified:
           type: boolean
           description: "Apakah user/blogger sudah menghubungkan email nya?."
           default: false
@@ -860,7 +860,7 @@ components:
               maxLength: 255
               description: "Email untuk setiap user/blogger (unique) bisa dijadikan identifier saar login."
               example: "andriana@gmail.com"
-            is_email_verified:
+            email_verified:
               type: boolean
               description: "Apakah user/blogger sudah menghubungkan email nya?."
               default: false
